# AssortmentOfUsefulFunctions

./: CMakeLists.txt  main.cpp
Date/: Date.cpp  Date.h
File/: CMakeLists.txt  File.cpp  File.h
String/: CMakeLists.txt  stringFunc.cpp  stringFunc.h
